# osmocom-bb

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.freertos  Dockerfile.libosmocore  Dockerfile.linux  Makefile  README.md  build.sh  docker-compose.yml  sync-from-refs.sh
include/osmocom/bb/common/: gsmtap_stub.h
scripts/: freertos_env.sh  linux_env.sh
src/compat/freertos/: netdb.h  socket.c  socket.h
src/compat/freertos/arpa/: inet.h
src/compat/freertos/netinet/: in.h
src/compat/freertos/sys/: socket.h
src/host/layer23/: CMakeLists.txt  configure.ac
src/host/layer23/src/: Makefile.am
src/host/layer23/src/common/: Makefile.am  gsmtap_stub.c  l1ctl.c  ms.c  pseudotalloc_platform.c  settings.c  stubs_no_gprs.c  sysinfo.c  talloc_compat_stub.c
src/host/layer23/src/mobile/: Makefile.am  log_gsmtap_stub.c  pseudotalloc_platform.c
